[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/itens/SunProtector.gd" type="Script" id=1]
[ext_resource path="res://sprites/SunProtector.png" type="Texture" id=2]
[ext_resource path="res://sounds/item ruim (1).ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 61, 86.5 )

[node name="SunProtector" type="Area2D"]
position = Vector2( 0, -5 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 15, 8.5 )
shape = SubResource( 1 )

[node name="SunProtectorSprite" type="Sprite" parent="."]
position = Vector2( 11, 8 )
scale = Vector2( 1.01879, 1.01879 )
texture = ExtResource( 2 )

[node name="CollectedSoundGood" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_SunProtector_body_entered"]
